(range-number-input) Fix chrome not aligning component parts to the right

--- a/src/styles/components/range-number-input.css
+++ b/src/styles/components/range-number-input.css
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
 }
 
